--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </div>
     </header>
     <main class="main">
-      <section class="section hero">
+      <section class="section hero overlay">
         <div class="container">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
           <button class="button primary" type="button">Замовити послугу</button>
