--- a/index.html
+++ b/index.html
@@ -70,26 +70,54 @@
           <h2 class="section-title">Особливості нашої компанії</h2>
           <ul class="list benefits-list">
             <li class="item">
-              <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <div class="wrapper">
+                <svg class="icon" width="70" height="70">
+                  <use href="./images/symbol-defs2.svg#icon-antenna-1">
+                  </use>
+                </svg>
+                <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="description">
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 позиції.
               </p>
             </li>
+          </div>
             <li class="item">
-              <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
-              <p class="description">
-                Завдання організації, особливо рамки і місце навчання кадрів
-                тягне у себе.
-              </p>
+              <div class="wrapper">
+                <svg class="icon" width="70" height="70">
+                  <use href="./images/symbol-defs2.svg#icon-clock-1">
+
+                  </use>
+                </svg>
+                <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
+                <p class="description">
+                  Завдання організації, особливо рамки і місце навчання кадрів
+                  тягне у себе.
+                </p>
+              </div>
+              
             </li>
+             
             <li class="item">
+              <div class="wrapper">
+                <svg class="icon" width="70" height="70">
+                  <use href="./images/symbol-defs2.svg#icon-diagram-1">
+                  </use>
+                </svg>
+              </div>
               <h3 class="title">ПЛАНУВАННЯ</h3>
               <p class="description">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li class="item">
+              <div class="wrapper">
+                <svg class="icon" width="70" height="70">
+                  <use href="./images/symbol-defs2.svg#icon-astronaut-1">
+
+                  </use>
+                </svg>
+              </div>
               <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="description">
                 Значимість цих проблем настільки очевидна, що реалізація
